--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
       --page-gutter: clamp(1rem, 4vw, 2.25rem);
       --page-padding-top: clamp(1.5rem, 4vw, 2.5rem);
       --page-padding-bottom: 120px;
-      --focus-shell-width: min(92vw, 600px);
+      /* Full-screen overlay width with 8px safe margins on both sides */
+      --focus-shell-width: calc(100vw - 16px);
       --tasker-brand-gradient: linear-gradient(90deg, #7bd88f, #2dd4c3);
     }
 
