--- a/index.html
+++ b/index.html
@@ -6531,6 +6531,13 @@
   .routine-stack {
     padding-inline: 8px;
   }
+  /* DEBUG — force overlay boundaries visible */
+#focus.focus-overlay {
+  outline: 3px solid lime !important;
+  background: rgba(0, 255, 0, 0.05) !important;
+}
+.focus-overlay__sheet {
+  outline: 3px dashed red !important;
 }
 }
   </style>
