--- a/index.html
+++ b/index.html
@@ -1486,12 +1486,12 @@
 
 /* Ensure the inner sheet actually fills the container */
 .focus-overlay__sheet {
-  width: 100% !important;
-  height: 100% !important;
+  width: auto
+  height: auto
   max-width: none !important;
   max-height: none !important;
-  border-radius: 16px;        /* keep rounded floating-sheet style */
-  overflow: auto;
+  border-radius: 8px;        /* keep rounded floating-sheet style */
+  overflow: hidden;
   box-shadow: 0 0 24px rgba(0,0,0,0.5);
 }
     .task-list-header > * {
