--- a/index.html
+++ b/index.html
@@ -4116,7 +4116,8 @@
       display: flex;
       align-items: stretch;
       justify-content: center;
-      padding: clamp(0.5rem, 4vw, 2.25rem);
+      --overlay-gutter: clamp(0.5rem, 4vw, 2.25rem);
+      padding: var(--overlay-gutter);
       z-index: 130;
     }
 
@@ -4129,8 +4130,10 @@
 
     .all-tasks-overlay__sheet {
       position: relative;
-      width: min(98vw, 840px);
-      max-height: clamp(420px, 96vh, 940px);
+      width: calc(100vw - 2 * var(--overlay-gutter) - env(safe-area-inset-left) - env(safe-area-inset-right));
+      max-width: calc(100vw - 2 * var(--overlay-gutter) - env(safe-area-inset-left) - env(safe-area-inset-right));
+      min-height: calc(100dvh - 2 * var(--overlay-gutter) - env(safe-area-inset-top) - env(safe-area-inset-bottom));
+      max-height: calc(100dvh - 2 * var(--overlay-gutter) - env(safe-area-inset-top) - env(safe-area-inset-bottom));
       border-radius: 28px;
       border: 1px solid rgba(148, 163, 184, 0.28);
       background: rgba(13, 19, 27, 0.96);
@@ -4139,6 +4142,15 @@
       flex-direction: column;
       padding: clamp(1rem, 3vw, 1.6rem);
       overflow: hidden;
+    }
+
+    @media (min-width: 900px) {
+      .all-tasks-overlay__sheet {
+        width: min(calc(100vw - 2 * var(--overlay-gutter) - env(safe-area-inset-left) - env(safe-area-inset-right)), 840px);
+        max-width: min(calc(100vw - 2 * var(--overlay-gutter) - env(safe-area-inset-left) - env(safe-area-inset-right)), 840px);
+        min-height: auto;
+        max-height: clamp(420px, 96vh, 940px);
+      }
     }
 
     .all-tasks-overlay__body {
