changed case for allTasksOverlay

--- a/index.html
+++ b/index.html
@@ -1430,7 +1430,7 @@
   <div class="all-tasks-overlay__sheet" tabindex="-1">
     <header class="all-tasks-overlay__header">
       <h2>All Tasks</h2>
-      <button id="closeAllTasksOverlay" aria-label="Close All Tasks">✖</button>
+      <button id="closeallTasksOverlay" aria-label="Close All Tasks">✖</button>
     </header>
 
     <div class="all-tasks-overlay__body">
