reconciled tasks vs tasks

--- a/index.html
+++ b/index.html
@@ -1349,7 +1349,7 @@
   </section>
 
   <section
-    id="allTasksOverlay"
+    id="AllTasksOverlay"
     class="all-tasks-overlay hidden"
     aria-hidden="true"
     data-all-tasks-screen
@@ -1359,7 +1359,7 @@
       class="all-tasks-overlay__sheet"
       role="dialog"
       aria-modal="true"
-      aria-labelledby="allTasksOverlayTitle"
+      aria-labelledby="AllTasksOverlayTitle"
       tabindex="-1"
     >
       <button type="button" class="all-tasks-overlay__close" data-all-tasks-close aria-label="Close All Tasks">
@@ -1374,7 +1374,7 @@
             aria-expanded="false"
             data-all-tasks-heading
           >
-            <span id="allTasksOverlayTitle" class="all-tasks-toggle__title" data-all-tasks-title>All Tasks</span>
+            <span id="AllTasksOverlayTitle" class="all-tasks-toggle__title" data-all-tasks-title>All Tasks</span>
             <span class="all-tasks-toggle__meta">
               <span data-all-tasks-category>All categories</span>
               <span class="all-tasks-header__divider" data-all-tasks-divider aria-hidden="true">•</span>
@@ -1426,11 +1426,11 @@
       </div>
     </div>
   </section>
-<div id="allTasksOverlay" class="hidden" aria-hidden="true">
+<div id="AllTasksOverlay" class="hidden" aria-hidden="true">
   <div class="all-tasks-overlay__sheet" tabindex="-1">
     <header class="all-tasks-overlay__header">
       <h2>All Tasks</h2>
-      <button id="closeallTasksOverlay" aria-label="Close All Tasks">✖</button>
+      <button id="closeAllTasksOverlay" aria-label="Close All Tasks">✖</button>
     </header>
 
     <div class="all-tasks-overlay__body">
@@ -1449,7 +1449,7 @@
       class="command-link"
       type="button"
       aria-haspopup="dialog"
-      aria-controls="allTasksOverlay"
+      aria-controls="AllTasksOverlay"
       aria-expanded="false"
       data-command-all-tasks="true"
     >
