--- a/index.html
+++ b/index.html
@@ -6544,11 +6544,11 @@
     padding-inline: 8px;
   }
   /* DEBUG — force overlay boundaries visible */
-#focus.focus-overlay {
+#AllTasksOverlay {
   outline: 3px solid lime !important;
   background: rgba(0, 255, 0, 0.05) !important;
 }
-.focus-overlay__sheet {
+.AllTasksOverlay__sheet {
   outline: 3px dashed red !important;
 }
 }
