--- a/index.html
+++ b/index.html
@@ -19010,6 +19010,22 @@ initializeFocusFabLongPress();
     } else {
       console.log("Outline applied to the container:", outline);
     }
+    // Select elements
+const overlay = document.querySelector('.all-tasks-overlay');
+const openBtn = document.querySelector('#openAllTasks'); // your "All Tasks" button
+const closeBtn = document.querySelector('.all-tasks-overlay__close');
+
+// Open overlay
+openBtn.addEventListener('click', () => {
+  overlay.removeAttribute('hidden');                 // make it visible
+  document.body.classList.add('all-tasks-overlay-active'); // lock background scroll
+});
+
+// Close overlay
+closeBtn.addEventListener('click', () => {
+  overlay.setAttribute('hidden', '');                // hide overlay
+  document.body.classList.remove('all-tasks-overlay-active'); // restore scroll
+});
   });
     </script>
 </body>
