--- a/index.html
+++ b/index.html
@@ -6679,6 +6679,9 @@ body.all-tasks-overlay-active {
   overflow-x: hidden;
   -webkit-overflow-scrolling: touch;
 }
+  .all-tasks-overlay__body {
+  scrollbar-gutter: stable both-edges;
+  }
   </style>
 </head>
 <body>
